fixed some phrases

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web App"
+      content="Real State Agency"
     />
-
     <title>Mar Del Casas</title>
   </head>
   <body>
